kubernetes/security/foundation/network-policies/keycloak.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cnpg-operator
  namespace: keycloak
  labels:
    security.category: network-policies
    managed-by: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: database
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
