kubernetes/security/foundation/network-policies/lldap.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: lldap-ingress-lock
  namespace: lldap
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lldap
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: keycloak
            app: keycloak
      toPorts:
        - ports:
            - { port: "6360", protocol: TCP }
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: gateway
            gateway.envoyproxy.io/owning-gateway-name: envoy-gateway
        - matchLabels:
            io.kubernetes.pod.namespace: lldap
      toPorts:
        - ports:
            - { port: "17170", protocol: TCP }
    - fromEntities:
        - host
      toPorts:
        - ports:
            - { port: "17170", protocol: TCP }
