kubernetes/security/foundation/network-policies/redis-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redis-gateway-ingress-lock
  namespace: gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: redis-gateway
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy-ratelimit
      toPorts:
        - ports:
            - { port: "6379", protocol: TCP }
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: redis-operator-system
      toPorts:
        - ports:
            - { port: "6379", protocol: TCP }
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - { port: "9121", protocol: TCP }
