kubernetes/security/foundation/network-policies/tenant-defaults.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: tenant-drova-default-deny-ingress
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: drova
  enableDefaultDeny:
    ingress: false
    egress: false
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: drova
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gateway
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kafka
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: opentelemetry
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: jaeger
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cilium-spire
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: tenant-n8n-prod-default-deny-ingress
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: n8n-prod
  enableDefaultDeny:
    ingress: false
    egress: false
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: n8n-prod
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gateway
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cloudflared
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: tenant-keycloak-default-deny-ingress
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: keycloak
  enableDefaultDeny:
    ingress: false
    egress: false
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: keycloak
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gateway
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: lldap
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
