kubernetes/security/foundation/network-policies/uptime-kuma.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: uptime-kuma-ingress-lock
  namespace: uptime-kuma
spec:
  endpointSelector:
    matchLabels:
      app: uptime-kuma
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: gateway
      toPorts:
        - ports:
            - { port: "3001", protocol: TCP }
    - fromEntities: [host]
      toPorts:
        - ports:
            - { port: "3001", protocol: TCP }
